2014-06-25  Brady Eidson  <beidson@apple.com>

        Add HID-based gamepad implementation for Mac
        https://bugs.webkit.org/show_bug.cgi?id=134324

        Reviewed by Dean Jackson.

        Add a class that acts as an intermediary between the GamepadStrategyClient
        and the HIDGamepadListener:
        * WebCoreSupport/WebHIDGamepadController.h:
        * WebCoreSupport/WebHIDGamepadController.mm:
        (WebHIDGamepadController::shared):
        (WebHIDGamepadController::WebHIDGamepadController):
        (WebHIDGamepadController::gamepadConnected):
        (WebHIDGamepadController::gamepadDisconnected):
        (WebHIDGamepadController::registerGamepadStrategyClient):
        (WebHIDGamepadController::unregisterGamepadStrategyClient):

        Implement the strategies by using the HIDGamepadListener:
        * WebCoreSupport/WebPlatformStrategies.mm:
        (WebPlatformStrategies::startMonitoringGamepads):
        (WebPlatformStrategies::stopMonitoringGamepads):
        (WebPlatformStrategies::platformGamepads):

2014-06-25  Brady Eidson  <beidson@apple.com>

        Add new platform gamepad abstractions
        https://bugs.webkit.org/show_bug.cgi?id=134325

        Reviewed by Dean Jackson.

        * WebCoreSupport/WebPlatformStrategies.h:
        * WebCoreSupport/WebPlatformStrategies.mm:
        (WebPlatformStrategies::createGamepadStrategy):
        (WebPlatformStrategies::startMonitoringGamepads):
        (WebPlatformStrategies::stopMonitoringGamepads):
        (WebPlatformStrategies::platformGamepads):

2014-06-25  Gavin Barraclough  <baraclough@apple.com>

        Should _updateVisibilityState on view hide/unhide.
        https://bugs.webkit.org/show_bug.cgi?id=134314
        rdar://17171803

        Reviewed by Sam Weinig.

        * WebView/WebView.mm:
        (-[WebView viewDidHide]):
        (-[WebView viewDidUnhide]):

2014-06-25  Chris Fleizach  <cfleizach@apple.com>

        Add an undo group for each dictated utterance in WebKit